--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1496,74 +1496,72 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
     let currentCarouselImages = [];
     let currentCarouselIndex = 0;
 
-    /* MOSTRAR DETALHES DO PROJETO */
     function mostrarDetalhes(projetoId) {
-      const dados = projetosData[projetoId];
-      if (!dados) return;
+  const dados = projetosData[projetoId];
+  if (!dados) return;
 
-      document.getElementById('detalhes-img').src = dados.img;
-      document.getElementById('detalhes-titulo').innerHTML = dados.titulo[currentLang];
-      document.getElementById('detalhes-texto').innerHTML = dados.texto[currentLang];
+  document.getElementById('detalhes-img').src = dados.img;
+  document.getElementById('detalhes-titulo').innerHTML = dados.titulo[currentLang];
+  document.getElementById('detalhes-texto').innerHTML = dados.texto[currentLang];
 
-      // Lista de ações
-      const ulAcoes = document.getElementById('detalhes-acoes-list');
-      ulAcoes.innerHTML = "";
-      dados.acoes[currentLang].forEach(acao => {
-        const li = document.createElement('li');
-        li.textContent = acao;
-        ulAcoes.appendChild(li);
-      });
+  // Lista de ações
+  const ulAcoes = document.getElementById('detalhes-acoes-list');
+  ulAcoes.innerHTML = "";
+  dados.acoes[currentLang].forEach(acao => {
+    const li = document.createElement('li');
+    li.textContent = acao;
+    ulAcoes.appendChild(li);
+  });
 
-      // Recursos
-      document.getElementById('detalhes-recursos-texto').innerHTML = dados.recursos[currentLang];
-      document.getElementById('detalhes-termometro').style.width = dados.termometro + "%";
+  // ⚠️ Ocultar recursos e progresso de arrecadação (sem apagar a lógica)
+  document.getElementById('detalhes-recursos-titulo').style.display = 'none';
+  document.getElementById('detalhes-recursos-texto').style.display = 'none';
+  document.getElementById('detalhes-progresso-titulo').style.display = 'none';
+  document.getElementById('detalhes-termometro').style.display = 'none';
+  document.getElementById('status-descricao').style.display = 'none';
+  document.getElementById('detalhes-btn-doar').style.display = 'none';
 
-      const porcentagemAlcancada = dados.termometro;
-      const porcentagemFaltando = 100 - porcentagemAlcancada;
+  const porcentagemAlcancada = dados.termometro;
+  const porcentagemFaltando = 100 - porcentagemAlcancada;
 
-      // Ajusta títulos e botão de acordo com o idioma
-      if (currentLang === 'pt') {
-        document.getElementById('detalhes-acoes-titulo').textContent = "Ações do Projeto:";
-        document.getElementById('detalhes-recursos-titulo').textContent = "Recursos Necessários:";
-        document.getElementById('detalhes-progresso-titulo').textContent = "Progresso de Arrecadação";
-        document.getElementById('detalhes-btn-doar').textContent = "Doar";
-        document.getElementById('detalhes-btn-doar').setAttribute('onclick', "alert('Página de Doação em desenvolvimento')");
-        document.getElementById('status-descricao').textContent =
-          porcentagemAlcancada + "% alcançado, " + porcentagemFaltando + "% faltando";
-      } else {
-        document.getElementById('detalhes-acoes-titulo').textContent = "Project Actions:";
-        document.getElementById('detalhes-recursos-titulo').textContent = "Needed Resources:";
-        document.getElementById('detalhes-progresso-titulo').textContent = "Fundraising Progress";
-        document.getElementById('detalhes-btn-doar').textContent = "Donate";
-        document.getElementById('detalhes-btn-doar').setAttribute('onclick', "alert('Donation Page in development')");
-        document.getElementById('status-descricao').textContent =
-          porcentagemAlcancada + "% reached, " + porcentagemFaltando + "% remaining";
-      }
+  if (currentLang === 'pt') {
+    document.getElementById('detalhes-acoes-titulo').textContent = "Ações do Projeto:";
+    document.getElementById('detalhes-recursos-titulo').textContent = "Recursos Necessários:";
+    document.getElementById('detalhes-progresso-titulo').textContent = "Progresso de Arrecadação";
+    document.getElementById('detalhes-btn-doar').textContent = "Doar";
+    document.getElementById('detalhes-btn-doar').setAttribute('onclick', "alert('Página de Doação em desenvolvimento')");
+    document.getElementById('status-descricao').textContent =
+      porcentagemAlcancada + "% alcançado, " + porcentagemFaltando + "% faltando";
+  } else {
+    document.getElementById('detalhes-acoes-titulo').textContent = "Project Actions:";
+    document.getElementById('detalhes-recursos-titulo').textContent = "Needed Resources:";
+    document.getElementById('detalhes-progresso-titulo').textContent = "Fundraising Progress";
+    document.getElementById('detalhes-btn-doar').textContent = "Donate";
+    document.getElementById('detalhes-btn-doar').setAttribute('onclick', "alert('Donation Page in development')");
+    document.getElementById('status-descricao').textContent =
+      porcentagemAlcancada + "% reached, " + porcentagemFaltando + "% remaining";
+  }
 
-      // Exibir botão especial se for Hannah English Course
-      const inglesBtn = document.getElementById('btn-ingles-container');
-      if (projetoId === "ingles") {
-        inglesBtn.style.display = "block";
-      } else {
-        inglesBtn.style.display = "none";
-      }
+  // Botão do curso de inglês
+  const inglesBtn = document.getElementById('btn-ingles-container');
+  inglesBtn.style.display = projetoId === "ingles" ? "block" : "none";
 
-      // Carregar imagens do carrossel interno (miniaturas)
-      currentCarouselImages = dados.carousel || [];
-      const carouselTrack = document.getElementById('detalhes-carousel-track');
-      carouselTrack.innerHTML = "";
-      currentCarouselImages.forEach((src, index) => {
-        const img = document.createElement('img');
-        img.src = src;
-        img.alt = dados.titulo[currentLang] + " carousel image " + (index+1);
-        img.classList.add("detalhes-carousel-item");
-        img.addEventListener('click', () => openModal(index));
-        carouselTrack.appendChild(img);
-      });
+  // Carrossel interno
+  currentCarouselImages = dados.carousel || [];
+  const carouselTrack = document.getElementById('detalhes-carousel-track');
+  carouselTrack.innerHTML = "";
+  currentCarouselImages.forEach((src, index) => {
+    const img = document.createElement('img');
+    img.src = src;
+    img.alt = dados.titulo[currentLang] + " carousel image " + (index + 1);
+    img.classList.add("detalhes-carousel-item");
+    img.addEventListener('click', () => openModal(index));
+    carouselTrack.appendChild(img);
+  });
 
-      document.getElementById('container-detalhes').style.display = 'block';
-      document.getElementById('container-detalhes').scrollIntoView({ behavior: 'smooth' });
-    }
+  document.getElementById('container-detalhes').style.display = 'block';
+  document.getElementById('container-detalhes').scrollIntoView({ behavior: 'smooth' });
+}
 
     function fecharDetalhes() {
       document.getElementById('container-detalhes').style.display = 'none';
