--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -580,16 +580,6 @@
   background: rgba(255, 0, 0, 0.8);
   transform: scale(1.1);
 }
-
- /* ====== OCULTAR RECURSOS NECESSÁRIOS & PROGRESSO (mantém botão) ====== */
-#detalhes-recursos-titulo,
-#detalhes-recursos-texto,
-#detalhes-progresso-titulo,
-.termometro,              /* ⬅ fundo da barra */
-#detalhes-termometro,     /* barra de preenchimento */
-#status-descricao {
-  display: none !important;
-}
   </style>
 </head>
 
@@ -1496,71 +1486,74 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
     let currentCarouselImages = [];
     let currentCarouselIndex = 0;
 
+    /* MOSTRAR DETALHES DO PROJETO */
     function mostrarDetalhes(projetoId) {
-  const dados = projetosData[projetoId];
-  if (!dados) return;
+      const dados = projetosData[projetoId];
+      if (!dados) return;
 
-  document.getElementById('detalhes-img').src = dados.img;
-  document.getElementById('detalhes-titulo').innerHTML = dados.titulo[currentLang];
-  document.getElementById('detalhes-texto').innerHTML = dados.texto[currentLang];
+      document.getElementById('detalhes-img').src = dados.img;
+      document.getElementById('detalhes-titulo').innerHTML = dados.titulo[currentLang];
+      document.getElementById('detalhes-texto').innerHTML = dados.texto[currentLang];
 
-  // Lista de ações
-  const ulAcoes = document.getElementById('detalhes-acoes-list');
-  ulAcoes.innerHTML = "";
-  dados.acoes[currentLang].forEach(acao => {
-    const li = document.createElement('li');
-    li.textContent = acao;
-    ulAcoes.appendChild(li);
-  });
+      // Lista de ações
+      const ulAcoes = document.getElementById('detalhes-acoes-list');
+      ulAcoes.innerHTML = "";
+      dados.acoes[currentLang].forEach(acao => {
+        const li = document.createElement('li');
+        li.textContent = acao;
+        ulAcoes.appendChild(li);
+      });
 
-  // ⚠️ Ocultar recursos e progresso de arrecadação (sem apagar a lógica)
-  document.getElementById('detalhes-recursos-titulo').style.display = 'none';
-  document.getElementById('detalhes-recursos-texto').style.display = 'none';
-  document.getElementById('detalhes-progresso-titulo').style.display = 'none';
-  document.getElementById('detalhes-termometro').style.display = 'none';
-  document.getElementById('status-descricao').style.display = 'none';
-  
-  const porcentagemAlcancada = dados.termometro;
-  const porcentagemFaltando = 100 - porcentagemAlcancada;
+      // Recursos
+      document.getElementById('detalhes-recursos-texto').innerHTML = dados.recursos[currentLang];
+      document.getElementById('detalhes-termometro').style.width = dados.termometro + "%";
 
-  if (currentLang === 'pt') {
-    document.getElementById('detalhes-acoes-titulo').textContent = "Ações do Projeto:";
-    document.getElementById('detalhes-recursos-titulo').textContent = "Recursos Necessários:";
-    document.getElementById('detalhes-progresso-titulo').textContent = "Progresso de Arrecadação";
-    document.getElementById('detalhes-btn-doar').textContent = "Doar";
-    document.getElementById('detalhes-btn-doar').setAttribute('onclick', "alert('Página de Doação em desenvolvimento')");
-    document.getElementById('status-descricao').textContent =
-      porcentagemAlcancada + "% alcançado, " + porcentagemFaltando + "% faltando";
-  } else {
-    document.getElementById('detalhes-acoes-titulo').textContent = "Project Actions:";
-    document.getElementById('detalhes-recursos-titulo').textContent = "Needed Resources:";
-    document.getElementById('detalhes-progresso-titulo').textContent = "Fundraising Progress";
-    document.getElementById('detalhes-btn-doar').textContent = "Donate";
-    document.getElementById('detalhes-btn-doar').setAttribute('onclick', "alert('Donation Page in development')");
-    document.getElementById('status-descricao').textContent =
-      porcentagemAlcancada + "% reached, " + porcentagemFaltando + "% remaining";
-  }
+      const porcentagemAlcancada = dados.termometro;
+      const porcentagemFaltando = 100 - porcentagemAlcancada;
 
-  // Botão do curso de inglês
-  const inglesBtn = document.getElementById('btn-ingles-container');
-  inglesBtn.style.display = projetoId === "ingles" ? "block" : "none";
+      // Ajusta títulos e botão de acordo com o idioma
+      if (currentLang === 'pt') {
+        document.getElementById('detalhes-acoes-titulo').textContent = "Ações do Projeto:";
+        document.getElementById('detalhes-recursos-titulo').textContent = "Recursos Necessários:";
+        document.getElementById('detalhes-progresso-titulo').textContent = "Progresso de Arrecadação";
+        document.getElementById('detalhes-btn-doar').textContent = "Doar";
+        document.getElementById('detalhes-btn-doar').setAttribute('onclick', "alert('Página de Doação em desenvolvimento')");
+        document.getElementById('status-descricao').textContent =
+          porcentagemAlcancada + "% alcançado, " + porcentagemFaltando + "% faltando";
+      } else {
+        document.getElementById('detalhes-acoes-titulo').textContent = "Project Actions:";
+        document.getElementById('detalhes-recursos-titulo').textContent = "Needed Resources:";
+        document.getElementById('detalhes-progresso-titulo').textContent = "Fundraising Progress";
+        document.getElementById('detalhes-btn-doar').textContent = "Donate";
+        document.getElementById('detalhes-btn-doar').setAttribute('onclick', "alert('Donation Page in development')");
+        document.getElementById('status-descricao').textContent =
+          porcentagemAlcancada + "% reached, " + porcentagemFaltando + "% remaining";
+      }
 
-  // Carrossel interno
-  currentCarouselImages = dados.carousel || [];
-  const carouselTrack = document.getElementById('detalhes-carousel-track');
-  carouselTrack.innerHTML = "";
-  currentCarouselImages.forEach((src, index) => {
-    const img = document.createElement('img');
-    img.src = src;
-    img.alt = dados.titulo[currentLang] + " carousel image " + (index + 1);
-    img.classList.add("detalhes-carousel-item");
-    img.addEventListener('click', () => openModal(index));
-    carouselTrack.appendChild(img);
-  });
+      // Exibir botão especial se for Hannah English Course
+      const inglesBtn = document.getElementById('btn-ingles-container');
+      if (projetoId === "ingles") {
+        inglesBtn.style.display = "block";
+      } else {
+        inglesBtn.style.display = "none";
+      }
 
-  document.getElementById('container-detalhes').style.display = 'block';
-  document.getElementById('container-detalhes').scrollIntoView({ behavior: 'smooth' });
-}
+      // Carregar imagens do carrossel interno (miniaturas)
+      currentCarouselImages = dados.carousel || [];
+      const carouselTrack = document.getElementById('detalhes-carousel-track');
+      carouselTrack.innerHTML = "";
+      currentCarouselImages.forEach((src, index) => {
+        const img = document.createElement('img');
+        img.src = src;
+        img.alt = dados.titulo[currentLang] + " carousel image " + (index+1);
+        img.classList.add("detalhes-carousel-item");
+        img.addEventListener('click', () => openModal(index));
+        carouselTrack.appendChild(img);
+      });
+
+      document.getElementById('container-detalhes').style.display = 'block';
+      document.getElementById('container-detalhes').scrollIntoView({ behavior: 'smooth' });
+    }
 
     function fecharDetalhes() {
       document.getElementById('container-detalhes').style.display = 'none';
@@ -1676,71 +1669,5 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
       }
     });
   </script>
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const termosOcultos = [
-    'Recursos Necessários:',
-    'Resources Needed:',
-    'Progresso de Arrecadação',
-    'Fundraising Progress',
-    'alcançado', 'faltando',
-    'raised', 'remaining',
-    '100% funded'
-  ];
-
-  function ocultarElementosComTextoAlvo() {
-    const todos = document.querySelectorAll("body *");
-    todos.forEach(el => {
-      if (el.childNodes.length === 1 && el.childNodes[0].nodeType === Node.TEXT_NODE) {
-        const texto = el.textContent.trim();
-        if (termosOcultos.some(t => texto.includes(t))) {
-          el.style.display = "none";
-        }
-      }
-    });
-  }
-
-  function ocultarElementosPorClasseOuEstrutura() {
-    const seletores = [
-      '.progress-bar',
-      '.progress-container',
-      '.progress-text',
-      '.funding-info',
-      '.funding-amount',
-      '.goal-label',
-      '.funding-progress',
-      '.goal-amount',
-      '.percent-text',
-      '.thermometer', // caso use termômetro com imagem
-      '.goal-status-text'
-    ];
-    seletores.forEach(seletor => {
-      document.querySelectorAll(seletor).forEach(el => {
-        el.style.display = "none";
-      });
-    });
-  }
-
-  function ocultarBlocosComTextoRecursos() {
-    const todos = document.querySelectorAll("*");
-    todos.forEach(el => {
-      if (el.innerText && termosOcultos.some(t => el.innerText.includes(t))) {
-        el.style.display = "none";
-      }
-    });
-  }
-
-  // Executar logo e após 2s para garantir elementos dinâmicos
-  ocultarElementosComTextoAlvo();
-  ocultarElementosPorClasseOuEstrutura();
-  ocultarBlocosComTextoRecursos();
-
-  setTimeout(() => {
-    ocultarElementosComTextoAlvo();
-    ocultarElementosPorClasseOuEstrutura();
-    ocultarBlocosComTextoRecursos();
-  }, 2000);
-});
-</script>
 </body>
 </html>
