--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -606,55 +606,55 @@
       <ul>
         <!-- Link 1: Sobre Nós / About Us -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#sobre-nos" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#sobre-nos" class="lang-pt">
             Sobre Nós
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#sobre-nos" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#sobre-nos" class="lang-en">
             About Us
           </a>
         </li>
         <!-- Link 2: Projetos / Projects -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#projetos" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#projetos" class="lang-pt">
             Projetos
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#projetos" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#projetos" class="lang-en">
             Projects
           </a>
         </li>
         <!-- Link 3: Como Ajudar / How to Help -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#como-ajudar" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#como-ajudar" class="lang-pt">
             Como Ajudar
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#como-ajudar" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#como-ajudar" class="lang-en">
             How to Help
           </a>
         </li>
         <!-- Link 4: Histórias / Stories -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#historias-impacto" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#historias-impacto" class="lang-pt">
             Histórias
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#historias-impacto" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#historias-impacto" class="lang-en">
             Stories
           </a>
         </li>
         <!-- Link 5: Depoimentos / Testimonials -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#depoimentos" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#depoimentos" class="lang-pt">
             Depoimentos
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#depoimentos" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#depoimentos" class="lang-en">
             Testimonials
           </a>
         </li>
         <!-- Link 6: Contato / Contact -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#footer" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#footer" class="lang-pt">
             Contato
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#footer" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#footer" class="lang-en">
             Contact
           </a>
         </li>
@@ -662,10 +662,10 @@
     </nav>
 
     <div class="cta-header">
-      <button onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'" class="lang-pt">
+      <button onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'" class="lang-pt">
         Doe Agora
       </button>
-      <button onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'" class="lang-en">
+      <button onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'" class="lang-en">
         Donate Now
       </button>
     </div>
@@ -684,10 +684,10 @@
   </header>
 
   <!-- Botão flutuante (mobile) -->
-  <button class="donate-float-mobile lang-pt" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+  <button class="donate-float-mobile lang-pt" onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'">
     Doe Agora
   </button>
-  <button class="donate-float-mobile lang-en" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+  <button class="donate-float-mobile lang-en" onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'">
     Donate Now
   </button>
 
@@ -826,7 +826,7 @@
 
           <!-- Botão especial para o Hannah English Course, se necessário -->
           <div class="botao-ingles" id="btn-ingles-container" style="display:none;">
-            <a href="https://hannahenglishcourse.vercel.app/" target="_blank">
+            <a href="https://hannahenglishcourse.netlify.app/" target="_blank">
               <img src="imagens/convite.gif" alt="Convite para o Centro de Aprendizado" />
             </a>
           </div>
@@ -1139,7 +1139,7 @@ A protagonista Hannah conduz essa jornada linguística, convidando crianças, jo
 
 Em um segundo momento, planejamos disponibilizar o aplicativo no Brasil para que qualquer pessoa possa aprender inglês e, ao mesmo tempo, contribuir para o campo missionário. Cada inscrição no curso ajudará a financiar bolsas de estudo para crianças refugiadas, garantindo que elas também tenham acesso ao ensino do inglês e da Bíblia. Dessa forma, o aprendizado se torna um ato de impacto e transformação global.
 
-<br><br>📌 <b>Quer conhecer mais sobre o Hannah English Course?</b> <br>Acesse: <u><a href="https://hannahenglishcourse.vercel.app/" target="_blank">hannahenglishcourse.vercel.app</a></u>
+<br><br>📌 <b>Quer conhecer mais sobre o Hannah English Course?</b> <br>Acesse: <u><a href="https://hannahenglishcourse.netlify.app/" target="_blank">hannahenglishcourse.netlify.app</a></u>
         `,
           en: `
 <i>“Go into all the world and preach the gospel to all creation.” – Mark 16:15</i><br><br>
@@ -1151,7 +1151,7 @@ Hannah, the main character, guides this linguistic journey, inviting children, y
 
 In a second phase, we plan to make the app available in Brazil so that anyone can learn English while also contributing to the mission field. Each course enrollment will help fund scholarships for refugee children, ensuring that they too have access to learning English and the Bible. In this way, learning becomes an act of global impact and transformation.
 
-<br><br>📌 <b>Want to learn more about Hannah English Course?</b> <br>Visit: <u><a href="https://hannahenglishcourse.vercel.app/" target="_blank">hannahenglishcourse.vercel.app</a></u>
+<br><br>📌 <b>Want to learn more about Hannah English Course?</b> <br>Visit: <u><a href="https://hannahenglishcourse.netlify.app/" target="_blank">hannahenglishcourse.netlify.app</a></u>
         `
         },
         acoes: {
