--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -910,7 +910,7 @@
     </nav>
 
     <div class="cta-header">
-      <button id="nav-doar" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+      <button id="nav-doar" onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'">
         Doe Agora
       </button>
     </div>
@@ -931,7 +931,7 @@
   </header>
 
   <!-- Botão flutuante (mobile) -->
-  <button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+  <button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'">
     Doe Agora
   </button>
 
@@ -1678,7 +1678,7 @@
     // NOVA FUNÇÃO PARA O BOTÃO "CONHEÇA MAIS HISTÓRIAS"
     function goToImpactPage() {
       const lang = document.documentElement.getAttribute("lang") || "pt";
-      window.location.href = `https://hannahenglishcourse.vercel.app/Carrossel/impacto.html?lang=${lang}`;
+      window.location.href = `https://hannahenglishcourse.netlify.app/Carrossel/impacto.html?lang=${lang}`;
     }
   </script>
 </body>
