--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -9,15 +9,15 @@
 <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
 <meta property="og:title" content="Ajude a Transformar Vidas - Fundação Hannah">
 <meta property="og:description" content="Participe desta campanha especial e ajude a levar educação e esperança para crianças em necessidade!">
-<meta property="og:image" content="https://hannahenglishcourse.vercel.app/imagens/campanha.gif">
-<meta property="og:url" content="https://hannahenglishcourse.vercel.app/doacoes.html?item=campanha&lang=pt">
+<meta property="og:image" content="https://hannahenglishcourse.netlify.app/imagens/campanha.gif">
+<meta property="og:url" content="https://hannahenglishcourse.netlify.app/doacoes.html?item=campanha&lang=pt">
 <meta property="og:type" content="website">
 
 <!-- Twitter Card (para Twitter e alguns outros serviços) -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Ajude a Transformar Vidas - Fundação Hannah">
 <meta name="twitter:description" content="Participe desta campanha especial e ajude a levar educação e esperança para crianças em necessidade!">
-<meta name="twitter:image" content="https://hannahenglishcourse.vercel.app/imagens/campanha.gif">
+<meta name="twitter:image" content="https://hannahenglishcourse.netlify.app/imagens/campanha.gif">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -488,55 +488,55 @@
       <ul>
         <!-- Link 1: Sobre Nós / About Us -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#sobre-nos" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#sobre-nos" class="lang-pt">
             Sobre Nós
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#sobre-nos" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#sobre-nos" class="lang-en">
             About Us
           </a>
         </li>
         <!-- Link 2: Projetos / Projects -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#projetos" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#projetos" class="lang-pt">
             Projetos
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#projetos" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#projetos" class="lang-en">
             Projects
           </a>
         </li>
         <!-- Link 3: Como Ajudar / How to Help -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#como-ajudar" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#como-ajudar" class="lang-pt">
             Como Ajudar
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#como-ajudar" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#como-ajudar" class="lang-en">
             How to Help
           </a>
         </li>
         <!-- Link 4: Histórias / Stories -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#historias-impacto" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#historias-impacto" class="lang-pt">
             Histórias
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#historias-impacto" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#historias-impacto" class="lang-en">
             Stories
           </a>
         </li>
         <!-- Link 5: Depoimentos / Testimonials -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#depoimentos" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#depoimentos" class="lang-pt">
             Depoimentos
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#depoimentos" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#depoimentos" class="lang-en">
             Testimonials
           </a>
         </li>
         <!-- Link 6: Contato / Contact -->
         <li>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#footer" class="lang-pt">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#footer" class="lang-pt">
             Contato
           </a>
-          <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#footer" class="lang-en">
+          <a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#footer" class="lang-en">
             Contact
           </a>
         </li>
