--- a/Carrossel/historia.html
+++ b/Carrossel/historia.html
@@ -376,7 +376,7 @@
   </nav>
 
   <div class="cta-header">
-    <button onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">Doe Agora</button>
+    <button onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'">Doe Agora</button>
   </div>
 
   <div class="lang-switch">
@@ -392,7 +392,7 @@
 </header>
 
 <!-- Botão flutuante (mobile) -->
-<button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+<button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'">
   Doe Agora
 </button>
 
