--- a/Carrossel/impacto.html
+++ b/Carrossel/impacto.html
@@ -415,16 +415,16 @@
     <nav class="menu">
       <ul>
         <!-- Cada link aponta para a página principal + âncora específica -->
-        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html" id="nav-home">Home</a></li>
-        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#sobre-nos" id="nav-sobre-nos">Sobre Nós</a></li>
-        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#projetos" id="nav-projetos">Projetos</a></li>
-        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#como-ajudar" id="nav-como-ajudar">Como Ajudar</a></li>
-        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#depoimentos" id="nav-depoimentos">Depoimentos</a></li>
-        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#footer" id="nav-contato">Contato</a></li>
+        <li><a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html" id="nav-home">Home</a></li>
+        <li><a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#sobre-nos" id="nav-sobre-nos">Sobre Nós</a></li>
+        <li><a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#projetos" id="nav-projetos">Projetos</a></li>
+        <li><a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#como-ajudar" id="nav-como-ajudar">Como Ajudar</a></li>
+        <li><a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#depoimentos" id="nav-depoimentos">Depoimentos</a></li>
+        <li><a href="https://hannahenglishcourse.netlify.app/Carrossel/hannah.html#footer" id="nav-contato">Contato</a></li>
       </ul>
     </nav>
     <div class="cta-header">
-      <button onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">Doe Agora</button>
+      <button onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'">Doe Agora</button>
     </div>
     <!-- Seletor de idioma -->
     <div class="lang-switch">
@@ -440,7 +440,7 @@
   </header>
 
   <!-- Botão Doe Agora (mobile) -->
-  <button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+  <button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'">
     Doe Agora
   </button>
 
